# agent-playground

./: .env.example  .gitignore  00-agent-playground.ipynb  01-agent-intent-to-plan.ipynb  main.py  pyproject.toml
app/config/: sk_config.py
app/plugin/: sk_add_plugin.py
app/sample/: 00_execute_plugins.py
plugins/FunPlugin/Joke/: config.json  skprompt.txt
plugins/MessagePlugin/GenerateMessageJa/: config.json  skprompt.txt
plugins/SlackPlugin/: slack_plugin.py
plugins/WebSearchPlugin/: web_search.py
